--- a/Leet Code Easy.ipynb
+++ b/Leet Code Easy.ipynb
@@ -114,9 +114,183 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0bcca055",
+   "metadata": {},
+   "source": [
+    "# 14. Longest Common Prefix\n",
+    "Write a function to find the longest common prefix string amongst an array of strings.\n",
+    "\n",
+    "If there is no common prefix, return an empty string \"\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dd93d1e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def longestCommonPrefix(self, strs):\n",
+    "        count = 0\n",
+    "        strs.sort(key = len)\n",
+    "        print(strs)\n",
+    "        if (len(strs))>1 :\n",
+    "            x = strs[0]\n",
+    "            output = []\n",
+    "            isnotfound = False\n",
+    "            \n",
+    "            for ele in x: \n",
+    "                index = count\n",
+    "                for i in range(1, len(strs)):\n",
+    "                    if ele == strs[i][index]:\n",
+    "                        pass\n",
+    "                    else:\n",
+    "                        isnotfound = True\n",
+    "                count = count + 1\n",
+    "                if isnotfound == True:\n",
+    "                    break\n",
+    "                output.append(ele)\n",
+    "            return \"\".join(str(i) for i in output)\n",
+    "        \n",
+    "        elif len(strs) == 1 and len(strs[0])  == 0 :\n",
+    "            return \"\"\n",
+    "        else:\n",
+    "            return \"\".join(strs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfb24483",
+   "metadata": {},
+   "source": [
+    "# 27. Remove Element\n",
+    "\n",
+    "Given an integer array nums and an integer val, remove all occurrences of val in nums in-place. The relative order of the elements may be changed.\n",
+    "\n",
+    "Since it is impossible to change the length of the array in some languages, you must instead have the result be placed in the first part of the array nums. More formally, if there are k elements after removing the duplicates, then the first k elements of nums should hold the final result. It does not matter what you leave beyond the first k elements.\n",
+    "\n",
+    "Return k after placing the final result in the first k slots of nums.\n",
+    "\n",
+    "Do not allocate extra space for another array. You must do this by modifying the input array in-place with O(1) extra memory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8ce3afba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def removeElement(self, nums, val):\n",
+    "        while nums.count(val):\n",
+    "            print('yes')\n",
+    "            nums.remove(val)\n",
+    "        return len(nums)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91a91c5b",
+   "metadata": {},
+   "source": [
+    "# 66. Plus One\n",
+    "You are given a large integer represented as an integer array digits, where each digits[i] is the ith digit of the integer. The digits are ordered from most significant to least significant in left-to-right order. The large integer does not contain any leading 0's.\n",
+    "\n",
+    "Increment the large integer by one and return the resulting array of digits."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "98bb17a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def plusOne(self, digits):\n",
+    "        # x= int(''.join([str(i) for i in digits]))\n",
+    "        # x = x + 1\n",
+    "        # final = [i for i in str(x)]\n",
+    "        \n",
+    "        # return final\n",
+    "        for i in reversed(range(len(digits))):\n",
+    "            digits[i] +=1\n",
+    "            if digits[i]<10:\n",
+    "                x = digits\n",
+    "                return digits\n",
+    "            else:\n",
+    "                digits[i] = 0              \n",
+    "        digits.insert(0,1)\n",
+    "        return digits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8563fa24",
+   "metadata": {},
+   "source": [
+    "# 136. Single Number\n",
+    "\n",
+    "Given a non-empty array of integers nums, every element appears twice except for one. Find that single one.\n",
+    "\n",
+    "You must implement a solution with a linear runtime complexity and use only constant extra space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c18e81ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def singleNumber(self, nums):\n",
+    "        hash_dic = {}\n",
+    "        for ele in nums:\n",
+    "            if ele not in hash_dic:\n",
+    "                hash_dic[ele] = 1\n",
+    "            else:\n",
+    "                hash_dic.pop(ele)\n",
+    "        for key, values in hash_dic.items():\n",
+    "            x = key\n",
+    "        return x "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb478d6f",
+   "metadata": {},
+   "source": [
+    "# 283. Move Zeroes\n",
+    "Given an integer array nums, move all 0's to the end of it while maintaining the relative order of the non-zero elements.\n",
+    "\n",
+    "Note that you must do this in-place without making a copy of the array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9457c5f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def moveZeroes(self, nums):\n",
+    "        l = 0\n",
+    "        for r in range(len(nums)):\n",
+    "            if nums[r]:\n",
+    "                nums[l], nums[r] = nums[r], nums[l]\n",
+    "                l += 1\n",
+    "        return nums   "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeda05bc",
+   "id": "626baad8",
    "metadata": {},
    "outputs": [],
    "source": []
