--- a/Leet Code Easy.ipynb
+++ b/Leet Code Easy.ipynb
@@ -162,6 +162,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "92d8425e",
+   "metadata": {},
+   "source": [
+    "# 26. Remove Duplicates from Sorted Array\n",
+    "\n",
+    "Given an integer array nums sorted in non-decreasing order, remove the duplicates in-place such that each unique element appears only once. The relative order of the elements should be kept the same.\n",
+    "\n",
+    "Since it is impossible to change the length of the array in some languages, you must instead have the result be placed in the first part of the array nums. More formally, if there are k elements after removing the duplicates, then the first k elements of nums should hold the final result. It does not matter what you leave beyond the first k elements.\n",
+    "\n",
+    "Return k after placing the final result in the first k slots of nums.\n",
+    "\n",
+    "Do not allocate extra space for another array. You must do this by modifying the input array in-place with O(1) extra memory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "11f58907",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def removeDuplicates(self, nums):\n",
+    "        l = 1\n",
+    "        for r in range(1, len(nums)):\n",
+    "            if nums[r] != nums[r-1]:\n",
+    "                nums[l] = nums[r]\n",
+    "                l+=1\n",
+    "        return l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dfb24483",
    "metadata": {},
    "source": [
@@ -229,6 +262,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a1e3e46",
+   "metadata": {},
+   "source": [
+    "# 69. Sqrt(x)\n",
+    "\n",
+    "Given a non-negative integer x, return the square root of x rounded down to the nearest integer. The returned integer should be non-negative as well.\n",
+    "\n",
+    "You must not use any built-in exponent function or operator.\n",
+    "\n",
+    "For example, do not use pow(x, 0.5) in c++ or x ** 0.5 in python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6f640d34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def mySqrt(self, x):\n",
+    "        start = 0\n",
+    "        end = x\n",
+    "        while(start<=end):\n",
+    "            mid = (start+end)//2\n",
+    "            mul = mid * mid\n",
+    "            if mul == x: return mid\n",
+    "            elif (mul>x):end = mid - 1\n",
+    "            else:start = mid + 1\n",
+    "        return end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8563fa24",
    "metadata": {},
    "source": [
@@ -261,6 +328,67 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9fcf993",
+   "metadata": {},
+   "source": [
+    "# 169. Majority Element\n",
+    "\n",
+    "Given an array nums of size n, return the majority element.\n",
+    "\n",
+    "The majority element is the element that appears more than ⌊n / 2⌋ times. You may assume that the majority element always exists in the array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "22dadf6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def majorityElement(self, nums):\n",
+    "        li = {}\n",
+    "        unique = np.unique(nums)\n",
+    "        for n in unique:\n",
+    "            if n not in li:\n",
+    "                li[n] = 'yes'\n",
+    "            if nums.count(n) > int(len(nums)/2):\n",
+    "                return n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd663374",
+   "metadata": {},
+   "source": [
+    "# 263. Ugly Number\n",
+    "\n",
+    "Companies\n",
+    "An ugly number is a positive integer whose prime factors are limited to 2, 3, and 5.\n",
+    "\n",
+    "Given an integer n, return true if n is an ugly number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d90717f8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def isUgly(self, n):\n",
+    "        if n<= 0:\n",
+    "            return False\n",
+    "        for p in [2,3,5]:\n",
+    "            while n%p == 0:\n",
+    "                n = n // p\n",
+    "        if n==1:\n",
+    "            return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "eb478d6f",
    "metadata": {},
    "source": [
@@ -288,9 +416,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "691dc63d",
+   "metadata": {},
+   "source": [
+    "# 1189. Maximum Number of Balloons\n",
+    "\n",
+    "Given a string text, you want to use the characters of text to form as many instances of the word \"balloon\" as possible.\n",
+    "\n",
+    "You can use each character in text at most once. Return the maximum number of instances that can be formed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9e99a75c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "class Solution(object):\n",
+    "    def maxNumberOfBalloons(self, text):\n",
+    "        x = Counter(text)\n",
+    "        return(min(x['b'], x['a'], x['l']//2, x['o']//2, x['n'] ))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "626baad8",
+   "id": "d107f6cd",
    "metadata": {},
    "outputs": [],
    "source": []
