--- a/Leet Code Easy.ipynb
+++ b/Leet Code Easy.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92d8425e",
+   "id": "e3d41dfd",
    "metadata": {},
    "source": [
     "# 26. Remove Duplicates from Sorted Array\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "11f58907",
+   "id": "e8bccd02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,6 +226,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "278b1ab9",
+   "metadata": {},
+   "source": [
+    "# 35. Search Insert Position\n",
+    "\n",
+    "Given a sorted array of distinct integers and a target value, return the index if the target is found. If not, return the index where it would be if it were inserted in order.\n",
+    "\n",
+    "You must write an algorithm with O(log n) runtime complexity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7697c227",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def searchInsert(self, nums, target):\n",
+    "        l, r = 0, len(nums)-1\n",
+    "        while (l<=r):\n",
+    "            mid  = (l+r) // 2\n",
+    "            \n",
+    "            if nums[mid] == target:\n",
+    "                return mid\n",
+    "            if target>nums[mid]:\n",
+    "                l = mid + 1\n",
+    "            else:\n",
+    "                r = mid - 1\n",
+    "        return l"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "91a91c5b",
    "metadata": {},
    "source": [
@@ -262,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a1e3e46",
+   "id": "0cda1f4c",
    "metadata": {},
    "source": [
     "# 69. Sqrt(x)\n",
@@ -277,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6f640d34",
+   "id": "35309546",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9fcf993",
+   "id": "3717fdf2",
    "metadata": {},
    "source": [
     "# 169. Majority Element\n",
@@ -341,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "22dadf6d",
+   "id": "9c1c67fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +392,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd663374",
+   "id": "219ca513",
    "metadata": {},
    "source": [
     "# 263. Ugly Number\n",
@@ -372,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d90717f8",
+   "id": "5fd04c5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "691dc63d",
+   "id": "00082194",
    "metadata": {},
    "source": [
     "# 1189. Maximum Number of Balloons\n",
@@ -430,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9e99a75c",
+   "id": "9a362b3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d107f6cd",
+   "id": "810a1e14",
    "metadata": {},
    "outputs": [],
    "source": []
