--- a/Leet Code Medium.ipynb
+++ b/Leet Code Medium.ipynb
@@ -39,6 +39,92 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8b963337",
+   "metadata": {},
+   "source": [
+    "# 17. Letter Combinations of a Phone Number\n",
+    "\n",
+    "Given a string containing digits from 2-9 inclusive, return all possible letter combinations that the number could represent. Return the answer in any order.\n",
+    "\n",
+    "A mapping of digits to letters (just like on the telephone buttons) is given below. Note that 1 does not map to any letters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "05c123e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def letterCombinations(self, digits):\n",
+    "        phone_map = {'2': 'abc',\n",
+    "       '3': 'def',\n",
+    "       '4': 'ghi',\n",
+    "        '5': 'jkl',\n",
+    "        '6': 'mno',\n",
+    "        '7': 'pqrs',\n",
+    "        '8': 'tuv',\n",
+    "        '9': 'wxyz'\n",
+    "       }\n",
+    "        if digits == '':\n",
+    "            return []\n",
+    "        numbers = list(phone_map[digits[0]])\n",
+    "\n",
+    "        for digit in digits[1:]:\n",
+    "            numbers = [old + new for old in numbers for new in list(phone_map[digit])]\n",
+    "\n",
+    "        return numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a78d8618",
+   "metadata": {},
+   "source": [
+    "# 49. Group Anagrams\n",
+    "\n",
+    "Given an array of strings strs, group the anagrams together. You can return the answer in any order.\n",
+    "\n",
+    "An Anagram is a word or phrase formed by rearranging the letters of a different word or phrase, typically using all the original letters exactly once."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "11ba0843",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def groupAnagrams(self, strs):\n",
+    "        dic = {}\n",
+    "        for word in strs:\n",
+    "            sorted_word = ''.join(sorted(word))\n",
+    "            if sorted_word  not in dic:\n",
+    "                dic[sorted_word] = [word]\n",
+    "\n",
+    "            else:\n",
+    "                dic[sorted_word].append(word)\n",
+    "\n",
+    "        gp_ana = []\n",
+    "\n",
+    "        for items in dic.values():\n",
+    "            gp_ana.append(items)\n",
+    "            \n",
+    "        return gp_ana"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11122eae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "db8211a4",
    "metadata": {},
    "source": [
@@ -69,9 +155,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "becba4de",
+   "metadata": {},
+   "source": [
+    "# 347. Top K Frequent Elements\n",
+    "\n",
+    "Given an integer array nums and an integer k, return the k most frequent elements. You may return the answer in any order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ea5f879c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def topKFrequent(self, nums, k):\n",
+    "        \n",
+    "        dic = {}\n",
+    "        for i in nums:\n",
+    "            if i not in dic:\n",
+    "                dic[i] = 1\n",
+    "            else:\n",
+    "                dic[i] +=1\n",
+    "\n",
+    "        return sorted(dic, key = dic.get, reverse = True)[:k]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cae44028",
+   "metadata": {},
+   "source": [
+    "# 1324. Print Words Vertically\n",
+    "\n",
+    "Given a string s. Return all the words vertically in the same order in which they appear in s.\n",
+    "Words are returned as a list of strings, complete with spaces when is necessary. (Trailing spaces are not allowed).\n",
+    "Each word would be put on only one column and that in one column there will be only one word."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a9d42dc",
+   "id": "dcb4ed72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def printVertically(self, s: str) -> List[str]:\n",
+    "        s = s.split()\n",
+    "        k = len(max(s, key = len))\n",
+    "        i = 0\n",
+    "        vertical = []\n",
+    "        while(i<k):\n",
+    "            ver = ''\n",
+    "            for word in s:\n",
+    "                try:\n",
+    "                    print(word[i],end='')\n",
+    "                    ver = ver + word[i]\n",
+    "                except:\n",
+    "                    ver = ver + ' '\n",
+    "            vertical.append(ver.rstrip())\n",
+    "            i+=1\n",
+    "        return vertical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab948659",
    "metadata": {},
    "outputs": [],
    "source": []
