--- a/Leet Code Easy.ipynb
+++ b/Leet Code Easy.ipynb
@@ -260,6 +260,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5431d946",
+   "metadata": {},
+   "source": [
+    "# 58. Length of Last Word\n",
+    "\n",
+    "Given a string s consisting of words and spaces, return the length of the last word in the string.\n",
+    "\n",
+    "A word is a maximal \n",
+    "substring\n",
+    " consisting of non-space characters only."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "65db4798",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def lengthOfLastWord(self, s: str) -> int:\n",
+    "        return len(s.split()[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "91a91c5b",
    "metadata": {},
    "source": [
@@ -392,6 +418,154 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fc54e162",
+   "metadata": {},
+   "source": [
+    "# 202. Happy Number\n",
+    "\n",
+    "Write an algorithm to determine if a number n is happy.\n",
+    "\n",
+    "A happy number is a number defined by the following process:\n",
+    "\n",
+    "Starting with any positive integer, replace the number by the sum of the squares of its digits.\n",
+    "Repeat the process until the number equals 1 (where it will stay), or it loops endlessly in a cycle which does not include 1.\n",
+    "Those numbers for which this process ends in 1 are happy.\n",
+    "Return true if n is a happy number, and false if not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9c9360da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def isHappy(self, n):\n",
+    "        \"\"\"\n",
+    "        :type n: int\n",
+    "        :rtype: bool\n",
+    "        \"\"\"\n",
+    "        s = set()\n",
+    "        while n != 1:\n",
+    "            if n in s: return False\n",
+    "            s.add(n)\n",
+    "\n",
+    "            _sum = 0\n",
+    "            while n:\n",
+    "                _sum += (n % 10) ** 2\n",
+    "                n //= 10\n",
+    "            n = _sum\n",
+    "\n",
+    "        return n == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "803d1217",
+   "metadata": {},
+   "source": [
+    "# 205. Isomorphic Strings\n",
+    "\n",
+    "Given two strings s and t, determine if they are isomorphic.\n",
+    "\n",
+    "Two strings s and t are isomorphic if the characters in s can be replaced to get t.\n",
+    "\n",
+    "All occurrences of a character must be replaced with another character while preserving the order of characters. No two characters may map to the same character, but a character may map to itself."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6e87579c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isIsomorphic(self, s: str, t: str) -> bool:\n",
+    "        \n",
+    "        if len(s) != len(t):\n",
+    "            return False\n",
+    "\n",
+    "        s_dic = {}\n",
+    "        t_dic = {}\n",
+    "        temp =  ''\n",
+    "        temp1 = ''\n",
+    "\n",
+    "        def get_key(dic, value):\n",
+    "            key_list = list(dic.keys())      \n",
+    "            val_list = list(dic.values())\n",
+    "\n",
+    "            if value not in val_list:\n",
+    "                return ''        \n",
+    "            else:\n",
+    "                position = val_list.index(value)\n",
+    "                return key_list[position]\n",
+    "\n",
+    "        count =  0   \n",
+    "        for i in s:\n",
+    "            s_dic[i] = t[count]\n",
+    "            count+=1   \n",
+    "\n",
+    "        count = 0\n",
+    "        for i in t:\n",
+    "            t_dic[i] = s[count]\n",
+    "            count+=1   \n",
+    "            \n",
+    "        for i in t:\n",
+    "            key = get_key(s_dic,i)\n",
+    "            temp += key\n",
+    "        for i in s:\n",
+    "            key = get_key(t_dic,i)\n",
+    "            temp1 += key\n",
+    "\n",
+    "\n",
+    "        if temp == s and temp1 == t:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "299f8119",
+   "metadata": {},
+   "source": [
+    "# 242. Valid Anagram\n",
+    "\n",
+    "Given two strings s and t, return true if t is an anagram of s, and false otherwise.\n",
+    "\n",
+    "An Anagram is a word or phrase formed by rearranging the letters of a different word or phrase, typically using all the original letters exactly once."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "352bb7cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def isAnagram(self, s, t):\n",
+    "        if len(s) != len(t):\n",
+    "            return False\n",
+    "\n",
+    "        sdict = {}\n",
+    "        for i in s:\n",
+    "            if i not in sdict:\n",
+    "                sdict[i] = 1\n",
+    "            else:\n",
+    "                sdict[i] += 1\n",
+    "        for i in t:\n",
+    "            if (i not in sdict) or (t.count(i) != sdict.get(i)):\n",
+    "                return False\n",
+    "                break\n",
+    "        else:\n",
+    "            return True\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "219ca513",
    "metadata": {},
    "source": [
@@ -451,6 +625,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44a5fc47",
+   "metadata": {},
+   "source": [
+    "# 771. Jewels and Stones\n",
+    "\n",
+    "You're given strings jewels representing the types of stones that are jewels, and stones representing the stones you have. Each character in stones is a type of stone you have. You want to know how many of the stones you have are also jewels.\n",
+    "\n",
+    "Letters are case sensitive, so \"a\" is considered a different type of stone from \"A\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e41b1cdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def numJewelsInStones(self, jewels, stones):\n",
+    "        dic = {}\n",
+    "        for j in jewels:\n",
+    "            if j not in dic:\n",
+    "                dic[j] = 'yes'\n",
+    "        count = 0\n",
+    "        \n",
+    "        for i in stones:\n",
+    "            if i in dic.keys():\n",
+    "                count += 1\n",
+    "        return count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "527c4b11",
+   "metadata": {},
+   "source": [
+    "# 796. Rotate String\n",
+    "Given two strings s and goal, return true if and only if s can become goal after some number of shifts on s.\n",
+    "\n",
+    "A shift on s consists of moving the leftmost character of s to the rightmost position.\n",
+    "\n",
+    "For example, if s = \"abcde\", then it will be \"bcdea\" after one shift."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63b5357e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def rotateString(self, s, goal):\n",
+    "        return len(s) == len(goal) and goal in s + s\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "00082194",
    "metadata": {},
    "source": [
@@ -476,9 +709,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec66550d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ed5c93fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'List' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [5]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mSolution\u001b[39;00m:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mprintVertically\u001b[39m(\u001b[38;5;28mself\u001b[39m, s: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m List[\u001b[38;5;28mstr\u001b[39m]:\n\u001b[0;32m      3\u001b[0m         s \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39msplit()\n",
+      "Input \u001b[1;32mIn [5]\u001b[0m, in \u001b[0;36mSolution\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mSolution\u001b[39;00m:\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mprintVertically\u001b[39m(\u001b[38;5;28mself\u001b[39m, s: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[43mList\u001b[49m[\u001b[38;5;28mstr\u001b[39m]:\n\u001b[0;32m      3\u001b[0m         s \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39msplit()\n\u001b[0;32m      4\u001b[0m         k \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mmax\u001b[39m(s, key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'List' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def printVertically(self, s: str) -> List[str]:\n",
+    "        s = s.split()\n",
+    "        k = len(max(s, key = len))\n",
+    "        i = 0\n",
+    "        vertical = []\n",
+    "        while(i<k):\n",
+    "            ver = ''\n",
+    "            for word in s:\n",
+    "                try:\n",
+    "                    print(word[i],end='')\n",
+    "                    ver = ver + word[i]\n",
+    "                except:\n",
+    "                    ver = ver + ' '\n",
+    "            vertical.append(ver.rstrip())\n",
+    "            i+=1\n",
+    "        return vertical"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "794ccfc4",
+   "metadata": {},
+   "source": [
+    "# 2351. First Letter to Appear Twice\n",
+    "\n",
+    "Given a string s consisting of lowercase English letters, return the first letter to appear twice."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "810a1e14",
+   "id": "0059524c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def repeatedCharacter(self, s):\n",
+    "        dic = {}\n",
+    "        for i in s:\n",
+    "            if i not in dic:\n",
+    "                dic[i] = 1\n",
+    "            else:\n",
+    "                dic[i] += 1\n",
+    "\n",
+    "            if dic[i] == 2:\n",
+    "                return i\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b13095c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b44883c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d978d6cd",
    "metadata": {},
    "outputs": [],
    "source": []
