--- a/Leet Code Easy.ipynb
+++ b/Leet Code Easy.ipynb
@@ -322,6 +322,79 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6a94b595",
+   "metadata": {},
+   "source": [
+    "# 66. Plus One\n",
+    "\n",
+    "You are given a large integer represented as an integer array digits, where each digits[i] is the ith digit of the integer. The digits are ordered from most significant to least significant in left-to-right order. The large integer does not contain any leading 0's.\n",
+    "\n",
+    "Increment the large integer by one and return the resulting array of digits."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "83e6d69e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def plusOne(self, digits: List[int]) -> List[int]:\n",
+    "        # x= int(''.join([str(i) for i in digits]))\n",
+    "        # x = x + 1\n",
+    "        # final = [i for i in str(x)]\n",
+    "        \n",
+    "        # return final\n",
+    "        for i in reversed(range(len(digits))):\n",
+    "            digits[i] +=1\n",
+    "            if digits[i]<10:\n",
+    "                x = digits\n",
+    "                return digits\n",
+    "            else:\n",
+    "                digits[i] = 0              \n",
+    "        digits.insert(0,1)\n",
+    "        return digits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6d3e0d0",
+   "metadata": {},
+   "source": [
+    "# 67. Add Binary\n",
+    "Given two binary strings a and b, return their sum as a binary string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1094ce8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def addBinary(self, a, b):\n",
+    "        carry = 0\n",
+    "        result = ''\n",
+    "\n",
+    "        a, b = list(a), list(b)\n",
+    "\n",
+    "        while a or b or carry == 1:\n",
+    "            if a:\n",
+    "                value = int(a.pop())\n",
+    "                carry += value\n",
+    "            if b:\n",
+    "                value = int(b.pop())\n",
+    "                carry += value\n",
+    "\n",
+    "            result += str(carry % 2)\n",
+    "            carry = carry // 2\n",
+    "        return result[::-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0cda1f4c",
    "metadata": {},
    "source": [
@@ -352,6 +425,46 @@
     "            elif (mul>x):end = mid - 1\n",
     "            else:start = mid + 1\n",
     "        return end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12341204",
+   "metadata": {},
+   "source": [
+    "# 70. Climbing Stairs\n",
+    "\n",
+    "You are climbing a staircase. It takes n steps to reach the top.\n",
+    "\n",
+    "Each time you can either climb 1 or 2 steps. In how many distinct ways can you climb to the top?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7ea42c6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def climbStairs(self, n: int) -> int:\n",
+    "                # Dict = {1:1, 2:2, 3:3}\n",
+    "\n",
+    "        # for i in range(4, n+1):\n",
+    "        #     Dict[i] = Dict[i-1] + Dict[i-2]\n",
+    "        # return Dict[n]\n",
+    "        count = 0\n",
+    "        if (n%2 !=0):\n",
+    "            for i in range((n//2 + 1)):\n",
+    "                count += comb(n,i)\n",
+    "                n -= 1\n",
+    "        else: \n",
+    "            count = 1\n",
+    "            for i in range(n//2):\n",
+    "                count += comb(n,i)\n",
+    "                n -= 1\n",
+    "            \n",
+    "        return count\n"
    ]
   },
   {
@@ -625,6 +738,105 @@
   },
   {
    "cell_type": "markdown",
+   "id": "28dfebd8",
+   "metadata": {},
+   "source": [
+    "# 345. Reverse Vowels of a String\n",
+    "\n",
+    "Given a string s, reverse only all the vowels in the string and return it.\n",
+    "\n",
+    "The vowels are 'a', 'e', 'i', 'o', and 'u', and they can appear in both lower and upper cases, more than once."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "20e0f7d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def reverseVowels(self, s: str) -> str:\n",
+    "        vowels = {'a','A','e','E','i','I','o','O','u','U'}\n",
+    "        st = list(s)\n",
+    "        l = 0\n",
+    "        r = len(st)-1\n",
+    "\n",
+    "        while(l<r):\n",
+    "            if st[l] in vowels and st[r] in vowels:\n",
+    "                st[l], st[r] = st[r], st[l]\n",
+    "                l += 1\n",
+    "                r -= 1\n",
+    "                \n",
+    "            elif st[l] not in vowels:\n",
+    "                l += 1\n",
+    "            else:\n",
+    "                r -= 1    \n",
+    "        return ''.join(st)\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a0e38eb",
+   "metadata": {},
+   "source": [
+    "# 412. Fizz Buzz\n",
+    "\n",
+    "Given an integer n, return a string array answer (1-indexed) where:\n",
+    "\n",
+    "answer[i] == \"FizzBuzz\" if i is divisible by 3 and 5.\n",
+    "answer[i] == \"Fizz\" if i is divisible by 3.\n",
+    "answer[i] == \"Buzz\" if i is divisible by 5.\n",
+    "answer[i] == i (as a string) if none of the above conditions are true."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0cae8fdf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def fizzBuzz(self, n):\n",
+    "        arr = [\"FizzBuzz\" if (n%3 ==0) and (n%5 ==0) else \"Fizz\" if(n%3==0) else \"Buzz\" if(n%5==0) else str(n) for n in range(1, n+1)]     \n",
+    "        return arr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "912a6c82",
+   "metadata": {},
+   "source": [
+    "# 766. Toeplitz Matrix\n",
+    "\n",
+    "Given an m x n matrix, return true if the matrix is Toeplitz. Otherwise, return false.\n",
+    "\n",
+    "A matrix is Toeplitz if every diagonal from top-left to bottom-right has the same elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fc1ca4b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def isToeplitzMatrix(self, matrix):\n",
+    "        row = len(matrix)\n",
+    "        col = len(matrix[0])\n",
+    "        for i in range(1, row):\n",
+    "            for j in  range(1, col):\n",
+    "                if matrix[i][j] != matrix[i-1][j-1]:\n",
+    "                    return False\n",
+    "        else:\n",
+    "            return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "44a5fc47",
    "metadata": {},
    "source": [
@@ -710,34 +922,100 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec66550d",
+   "id": "a71b5a96",
    "metadata": {},
-   "source": []
+   "source": [
+    "# 1523. Count Odd Numbers in an Interval Range\n",
+    "\n",
+    "Given two non-negative integers low and high. Return the count of odd numbers between low and high (inclusive)."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ed5c93fd",
+   "id": "8f86f08d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Solution:\n",
-    "    def printVertically(self, s: str) -> List[str]:\n",
-    "        s = s.split()\n",
-    "        k = len(max(s, key = len))\n",
-    "        i = 0\n",
-    "        vertical = []\n",
-    "        while(i<k):\n",
-    "            ver = ''\n",
-    "            for word in s:\n",
-    "                try:\n",
-    "                    print(word[i],end='')\n",
-    "                    ver = ver + word[i]\n",
-    "                except:\n",
-    "                    ver = ver + ' '\n",
-    "            vertical.append(ver.rstrip())\n",
-    "            i+=1\n",
-    "        return vertical"
+    "class Solution(object):\n",
+    "    def countOdds(self, low, high):\n",
+    "        if low % 2 ==0:\n",
+    "            return (high-low + 1)//2\n",
+    "        return ((high-low)//2) + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33dd781e",
+   "metadata": {},
+   "source": [
+    "# 1678. Goal Parser Interpretation\n",
+    "\n",
+    "You own a Goal Parser that can interpret a string command. The command consists of an alphabet of \"G\", \"()\" and/or \"(al)\" in some order. The Goal Parser will interpret \"G\" as the string \"G\", \"()\" as the string \"o\", and \"(al)\" as the string \"al\". The interpreted strings are then concatenated in the original order.\n",
+    "\n",
+    "Given the string command, return the Goal Parser's interpretation of command.\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ddb65921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def interpret(self, command):\n",
+    "        count = 0\n",
+    "        result = []\n",
+    "        while(count<len(command)):\n",
+    "            if(command[count] == '('):\n",
+    "                if(command[count+1] == ')'):\n",
+    "                    count+=2\n",
+    "                    result.append('o')\n",
+    "                elif(command[count+3] == ')'):\n",
+    "                    count+=4\n",
+    "                    result.append('al')\n",
+    "            else:\n",
+    "                count+=1\n",
+    "                result.append('G')\n",
+    "        return ''.join(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d50d3a63",
+   "metadata": {},
+   "source": [
+    "# 2404. Most Frequent Even Element\n",
+    "\n",
+    "Given an integer array nums, return the most frequent even element.\n",
+    "\n",
+    "If there is a tie, return the smallest one. If there is no such element, return -1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bbfd1679",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def mostFrequentEven(self, nums):\n",
+    "        dic = {}\n",
+    "        for i in nums:\n",
+    "            if i%2 == 0:\n",
+    "                if i in dic:\n",
+    "                    dic[i]+= 1\n",
+    "                else:\n",
+    "                    dic[i] = 1\n",
+    "        if not dic:\n",
+    "            return -1\n",
+    "        maximum = max(dic.values())\n",
+    "        ans = min([k for k, v in dic.items() if v == maximum])\n",
+    "        return ans "
    ]
   },
   {
